# mimgp

./: CMakeLists.txt  README.md
mimgp/: CMakeLists.txt  main.cc  util.cc  util.h  util.test.cc
mimgp/calc/: CMakeLists.txt  calc.cc
mimgp/calc/calclexer/: CMakeLists.txt  calclexer.h  calclexer.test.cc  calctokens.cc  calctokens.h
mimgp/calc/calcparser/: CMakeLists.txt  calcparser.cc  st.cc  tacode.cc
mimgp/calc/group/: CMakeLists.txt  group.test.cc
mimgp/cmd/: CMakeLists.txt  cmdotp.cc  cmdotp.h
mimgp/eval/: CMakeLists.txt  eval.cc  eval.h  eval.test.cc
mimgp/lexer/: CMakeLists.txt  lexer.h  lexer.test.cc  tokens.h
mimgp/math/: CMakeLists.txt
mimgp/ui/: CMakeLists.txt  ui.h  uinp.h
src/: main.cc
